# server/src/routes/auth.route.ts
@@ -1,0 +1,7 @@
+import { Router } from "express";
+import { AuthController } from "../controllers/auth.controller";
+
+export const authRouter = Router()
+
+authRouter.post("/login", AuthController.login)
+authRouter.post("/register", AuthController.register)
